prisma, sustand, prettier

--- a/src/pages/cabinet/index.astro
+++ b/src/pages/cabinet/index.astro
@@ -3,5 +3,5 @@ import { CabinetApp } from '../../components/cabinetApp';
 import CabinetLayout from '../../layouts/CabinetLayout.astro';
 ---
 <CabinetLayout>
-  <CabinetApp client:load />
+  <CabinetApp client:only="react" />
 </CabinetLayout>
